# openwnn-webos

./: COPYING  Makefile  Makefile.am  configure.ac  oss-pkg-info.yaml
libs/libwnnDictionary/: predef_table.h
libs/libwnnDictionary/engine/: ndapi.c  ndbdic.c  ndcommon.c  ndfdic.c  ndldic.c  ndrdic.c  neapi.c  necode.c  nj_str.c
libs/libwnnDictionary/include/: nj_dic.h  nj_err.h  nj_ext.h  nj_lib.h  njd.h  njx_lib.h
src/: composingtext.cpp  fullRoman.cpp  halfRoman.cpp  kanaconverter.cpp  letterconverter.cpp  openwnnWrapper.cpp  openwnnclauseconverter.cpp  openwnndictionary.cpp  openwnnenginejajp.cpp  openwnninputmethod.cpp  romkan.cpp  romkanfullkatakana.cpp  romkanhalfkatakana.cpp  util.cpp  wnnkeymap.cpp
src/include/: composingtext.h  fullRoman.h  halfRoman.h  kanaconverter.h  letterconverter.h  openwnnWrapper.h  openwnnclauseconverter.h  openwnndictionary.h  openwnnenginejajp.h  openwnninputmethod.h  romkan.h  romkanfullkatakana.h  romkanhalfkatakana.h  strsegment.h  util.h  wnnkeymap.h  wnnword.h
